--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                       <a href="./loginadmin.html">Admin Login</a>
                       </div>
                     </div>
-                    <li><a>SIGNUP</a>
+                    <li><a href="./signup.html">SIGNUP</a>
                     <!--span><i class="far fa-moon white night"></i></span-->
                 </ul>
             </nav>
