--- a/loginadmin.html
+++ b/loginadmin.html
@@ -16,7 +16,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #BFC7DE;
+  background-color: #E27802;
 
   height: 10%; 
 
@@ -39,9 +39,9 @@ body {
   width: 25em;
   height: 22em;
   padding: 20px;
-  background-color: #75708C ;
+  background-color: #6A492B ;
   border-radius: 1em;
-  box-shadow: 0 0 5px #726f77; 
+  box-shadow: 0 0 5px #58391C; 
   color: #ffffff;
 }
 
@@ -50,7 +50,7 @@ h2 {
   text-align: center;
   margin-bottom: 45px;
   font-size: 200%;
-  text-shadow: 0 0 5px #cacaca; 
+  text-shadow: 0 0 5px #F88F01; 
 }
 
 p {
@@ -59,7 +59,7 @@ p {
   text-align: center;
   margin-bottom: 45px;
   font-size: 70%;
-  text-shadow: 0 0 5px #cacaca; 
+  text-shadow: 0 0 5px #58391C; 
 }
 
 .form-group {
@@ -72,7 +72,7 @@ label {
   font-weight: bold;
 }
 .custom-common-container{
-  background-color:#75708C  ;
+  background-color:#58391C  ;
   margin-top: 15px;
   border-radius: 5px;
 }
@@ -81,7 +81,7 @@ label {
 }
 .custom-common-header p {
   font-family: 'Reem kufi';
-  color: #00447c;
+  color: #000000;
   text-decoration: none;
   font-weight: bolder;
   font-size: 25px;
@@ -90,12 +90,12 @@ label {
   padding: 5px;
 }
 .custom-common-header p:hover{
-  color: #00447c;
+  color: #000000;
 }
 
 .custom-common-header a {
   font-family: 'Reem kufi';
-  color: #C7DBF7;
+  color: #FFFFFF;
   text-decoration: none;
   font-weight: bolder;
   font-size: 23px;
@@ -104,7 +104,7 @@ label {
   padding: 5px;
 }
 .custom-common-header a::before {
-  color: #C59594;
+  color: #FFFFFF;
   content: ""; 
   position: absolute; 
   bottom: 0; 
@@ -112,8 +112,8 @@ label {
   transform: translateX(-50%); 
   width: 0; 
   height: 10px;
-  color: #C59594;
-  background-color: #C59594;
+  color: #58391C;
+  background-color: #58391C;
   transition: width 0.3s;
 }
 .custom-common-header a::after {
@@ -124,10 +124,10 @@ label {
   left: 50%; 
   transform: translateX(-50%); 
   width: 0; 
-  height: 10px;
-  color: #C59594;
-  background-color: #C59594;
-  transition: width 0.3s;
+  height: 2px;
+  color: #58391C;
+  background-color: #F88F01;
+  transition: width 0.5s;
 }
 .custom-common-header a:hover{
   color: #010101;
@@ -154,7 +154,7 @@ button {
   width: 100%;
   min-height: 50px;
   margin-top: 40px;
-  background-color: #5d5d5d;
+  background-color: #E27802;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
   border: none;
