--- a/studentlogin.html
+++ b/studentlogin.html
@@ -16,7 +16,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #E27802;
+  background-color: #F3DEBA;
   height: 10%; 
   background-size: cover;
   
@@ -48,7 +48,7 @@ h2 {
   text-align: center;
   margin-bottom: 45px;
   font-size: 200%;
-  text-shadow: 0 0 5px #F88F01; 
+  text-shadow: 0 0 5px #F3DEBA; 
 }
 
 p {
@@ -125,7 +125,7 @@ label {
   width: 0; 
   height: 2px;
   color: #58391C;
-  background-color: #F88F01;
+  background-color: #F3DEBA;
   transition: width 0.5s;
 }
 .custom-common-header a:hover{
@@ -153,7 +153,7 @@ button {
   width: 100%;
   min-height: 50px;
   margin-top: 40px;
-  background-color: #E27802;
+  background-color: #675D50;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
   border: none;
